fix mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ body {
 
   font-family: 'Cairo', sans-serif;
   font-size: 1.1em;
-  overflow-x: hidden !important;
-  width: 100vw !important;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 h2,
